# station-backend

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  S_2_sk.pem  docker-compose-3-stations.yml  docker-compose.yml  docker-compose_dev.yml  justfile  pyproject.toml  requirements.txt  run_multiple_stations.py  setup.cfg  setup.py  station_config.yml.tmpl
.github/workflows/: Build.yml  publish_package.yml  tests.yml
airflow/: Dockerfile  airflow.cfg  entrypoint.sh  requirements.txt
airflow/dags/: DAG_PHT_build_and_run_test_train.py  DAG_PHT_get_updates.py  DAG_PHT_post_run_manual.py  DAG_PHT_query_updates.py  DAG_PHT_run_local.py  DAG_PHT_run_train.py  DAG_PHT_synchronize_trains.py  DAG_PHT_test_station_configuration.py  DAG_PHT_train_federated_model.py  DAG_aachen.py  DAG_achen.py  DAG_test_db.py
alembic/: env.py
alembic/versions/: 295c0371260d_initial_migration.py
configs/traefik/: config.yml  traefik.yml
docker/: Dockerfile_api  Dockerfile_ctl  ctl_entrypoint.sh
setup_scripts/: init.sql  seed_db.py  wait-for-it.sh
station/: Dockerfile  entrypoint.sh  example.station_config.yml  requirements.txt  run_station.py  station.cfg  test.db
station-worker/discovery/: data_discovery.py
station-worker/testing/: train_lightning_model.py
station-worker/trainer/: federated_trainer.py
station/app/: auth.py  cache.py  clients.py  config.py  logger.py  main.py  run_station.py  settings.py  test.db
station/app/api/: dependencies.py
station/app/crud/: __init__.py  base.py  crud_datasets.py  crud_discovery.py  crud_dl_models.py  crud_docker_trains.py  crud_fhir_servers.py  crud_local_train.py  crud_notifications.py  crud_train_configs.py  crud_trains.py  docker_trains.py  local_train_master_image.py  protocol.py  train.py
station/app/datasets/: filesystem.py  statistics.py
station/clients/: __init__.py  base.py  harbor_client.py  resource_client.py
station/common/: constants.py  station_config.py
station/ctl/: cli.py  constants.py  util.py
station/tests/: test_api.py  test_api_airflow.py  test_api_docker_trains.py  test_api_fhir_servers.py  test_api_local_trains.py  test_auth.py  test_central_client.py  test_db.py  test_settings.py
station/worker/: pht_worker.py
station_ctl/: cli.py  config.py  constants.py  util.py
station_ctl/config/: __init__.py  command.py  config.py  fix.py  fs.py  generators.py  validate.py  validators.py
station_ctl/install/: certs.py  command.py  docker.py  fs.py  templates.py
station_ctl/templates/: airflow.cfg.tmpl  docker-compose-tmpl.yml  docker-compose.yml.tmpl  station_config.yml.tmpl
station_ctl/tests/: test_config.py  test_install.py  test_validators.py
station_worker/: pht_worker.py
station_worker/discovery/: data_discovery.py
station_worker/loader/: base_loader.py  dataset.py
station_worker/testing/: populate_minio.py  train_lightning_model.py
station_worker/trainer/: __init__.py  base_trainer.py  federated_trainer.py
test_scripts/: execute_protocol.py  protocol.py
test_scripts/aachen_test_trains/: minio_upload_aachen_train.py  test_dict_aachen.txt
testing/: no_input_train.py
testing/average_age_csv_train/: age_sum.csv  avg_age_csv_train.py  input.csv  make_input.py  medium-input.csv
worker/: pht_worker.py
worker/discovery/: data_discovery.py
worker/loader/: base_loader.py  dataset.py  model_loader.py
worker/testing/: db.py  train_lightning_model.py
worker/trainer/: base_trainer.py
(+151 files in other folders)
