[tool.poetry]
name = "station"
version = "0.1.0"
description = ""
authors = ["Michael Graf <michael.graf@uni.tuebingen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "*" }
psycopg2-binary = "*"
docker = "*"
pandas = "*"
minio = "*"
fhir-kindling = "*"
pht-train-container-library = "*"
SQLAlchemy = "*"
loguru = "*"
jinja2 = "*"
click = "*"
rich = "*"
plotly = "*"
s3fs = "*"
python-multipart = "*"
redis = "*"
psutil = "*"
authup = { extras = ["fastapi"], version = "*" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.218"
pytest = "^7.2.0"
black = "^22.12.0"
coverage = "^7.0.1"
python-dotenv = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^2.21.0"
tox = "*"


[tool.ruff]
line-length = 120


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001"]
ignore = []
per-file-ignores = { "*/__init__.py" = ["F401"] }

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
