[tool.poetry]
name = "PHT Station Backend"
version = "0.1.0"
description = "Python library for handling containerized PHT trains"
authors = ["Michael Graf <michael.graf@uni-tuebingen.com>"]
readme = "README.md"
packages = [{include = "station"}]
include = ["station/ctl/templates/*.tmpl", "station/ctl/templates/traefik/*.tmpl"]

[tool.poetry.scripts]
station_ctl = "station.ctl.cli:cli"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "*" }
psycopg2-binary = "*"
cryptography = "*"
pycryptodome = "*"
requests = "*"
docker = "*"
numpy = "*"
pandas = "*"
minio = "*"
python-keycloak = "*"
fhir-kindling = "*"
pht-train-container-library = "*"
SQLAlchemy = "*"
psutil = "*"
loguru = "*"
jinja2 = "*"
click = "*"
rich = "*"
plotly = "*"
s3fs = "*"
python-multipart = "*"
redis = "4.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.230"
pytest = "^7.2.0"
black = "^22.12.0"
coverage = "^7.0.1"
python-dotenv = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^2.21.0"


[tool.ruff]
line-length = 120


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001"]
ignore = []
per-file-ignores = { "**/__init__.py" = ["F401"], "station/app/db/base" = ["F401"]}

# Exclude a variety of commonly ignored directories.
exclude = [
    "testing",
    "examples",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10